--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
@@ -18,96 +18,84 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron bg-primary">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDayTitle" class="lead"></p>
     </header>
     <div class="container-fluid">
-      <table class="table table-xl table-dark">
+      <table class="table alert-dark table-dark">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">TIME</th>
-            <th scope="col">EVENT</th>
-            <th scope="col">"BUTTON"</th>
+            <th scope="col" class="col-1">TIME</th>
+            <th scope="col" class="col-10 mx-auto">SCHEDULE YOUR EVENT HERE</th>
+            <th scope="col" class="col-1">"BUTTON"</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
             <td id="time">8:00am</td>
-            <td><input type="text" id="8" class="myForm" size=" 150"></td>
+            <td class="timeout"><input type="text" id="8" class="table-responsive textarea"></td>
             <td><button type="button" class="btn btn-dark" onclick="submit('8')">SUBMIT</button></td>
           </tr>
           <tr>
-            <th scope="row">1</th>
             <td id="time">9:00am</td>
-            <td><input type="text" id="9" size=" 150"></td>
+            <td class="timeout"><input type="text" id="9" class="table-responsive textarea"></td>
             <td><button type="button" class="btn btn-dark" onclick="submit('9')">SUBMIT</button></td>
           <tr>
-      <tr>
-        <th scope="row">1</th>
-        <td id="time">10:00am</td>
-        <td><input type="text" id="10" size=" 150"></td>
-        <td><button type="button" class="btn btn-dark" onclick="submit('10')">SUBMIT</button></td>
-      </tr>
-      <tr>
-        <th scope="row">1</th>
-        <td id="time">11:00am</td>
-        <td><input type="text" id="11" size=" 150"></td>
-        <td><button type="button" class="btn btn-dark" onclick="submit('11')">SUBMIT</button></td>
-      <tr> 
-        <tr>
-          <th scope="row">1</th>
-          <td id="time">12:00pm</td>
-          <td><input type="text" id="12" size=" 150"></td>
-          <td><button type="button" class="btn btn-dark" onclick="submit('12')">SUBMIT</button></td>
-        </tr>
-        <tr>
-          <th scope="row">1</th>
-          <td id="time">1:00pm</td>
-          <td><input type="text" id="1:00pm" size=" 150"></td>
-          <td><button type="button" class="btn btn-dark" onclick="submit('1')">SUBMIT</button></td>
-        <tr>
           <tr>
-            <th scope="row">1</th>
+            <td id="time">10:00am</td>
+            <td class="timeout"><input type="text" id="10" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('10')">SUBMIT</button></td>
+          </tr>
+          <tr>
+            <td id="time">11:00am</td>
+            <td class="timeout"><input type="text" id="11" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('11')">SUBMIT</button></td>
+          <tr> 
+          <tr>
+            <td id="time">12:00pm</td>
+            <td class="timeout"><input type="text" id="12" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('12')">SUBMIT</button></td>
+          </tr>
+          <tr>
+            <td id="time">1:00pm</td>
+            <td class="timeout"><input type="text" id="13" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('13')">SUBMIT</button></td>
+          <tr>
+          <tr>
             <td id="time">2:00pm</td>
-            <td><input type="text" id="2:00pm" size=" 150"></td>
-            <td><button type="button" class="btn btn-dark" onclick="submit('2:00pm')">SUBMIT</button></td>
+            <td class="timeout"><input type="text" id="14" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('14')">SUBMIT</button></td>
           <tr>
-            <tr>
-              <th scope="row">1</th>
-              <td id="time">3:00pm</td>
-              <td><input type="text" id="3:00pm" size=" 150"></td>
-              <td><button type="button" class="btn btn-dark" onclick="submit('3:00pm')">SUBMIT</button></td>
-            <tr>
-              <tr>
-                <th scope="row">1</th>
-                <td id="time">4:00pm</td>
-                <td><input type="text" id="4:00pm" size=" 150"></td>
-                <td><button type="button" class="btn btn-dark" onclick="submit('4:00pm')">SUBMIT</button></td>
-              <tr>
-                <tr>
-                  <th scope="row">1</th>
-                  <td id="time">5:00pm</td>
-                  <td><input type="text" id="5:00pm" size=" 150"></td>
-                  <td><button type="button" class="btn btn-dark" onclick="submit('5:00pm')">SUBMIT</button></td>
-                <tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td id="time">6:00pm</td>
-                    <td><input type="text" id="6:00pm" size=" 150"></td>
-                    <td><button type="button" class="btn btn-dark" onclick="submit('6:00pm')">SUBMIT</button></td>
+          <tr>
+            <td id="time">3:00pm</td>
+            <td class="timeout"><input type="text" id="15" class="table-responsive textarea"></td>
+            <td><button type="button" class="btn btn-dark" onclick="submit('15')">SUBMIT</button></td>
+          <tr>
+          <tr>
+             <td id="time">4:00pm</td>
+             <td class="timeout"><input type="text" id="16" class="table-responsive textarea"></td>
+             <td><button type="button" class="btn btn-dark" onclick="submit('16')">SUBMIT</button></td>
+          <tr>
+          <tr>
+             <td id="time">5:00pm</td>
+             <td class="timeout"><input type="text" id="17" class="table-responsive textarea"></td>
+             <td><button type="button" class="btn btn-dark" onclick="submit('17')">SUBMIT</button></td>
+          <tr>
+          <tr>
+             <td id="time">6:00pm</td>
+             <td class="timeout"><input type="text" id="18" class="table-responsive textarea"></td>
+             <td><button type="button" class="btn btn-dark" onclick="submit('18')">SUBMIT</button></td>
                   <tr>
         </tbody>
       </table>
-      <!-- Timeblocks go here -->
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
